--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="name grid_text">
               <div class="myname wow animate__animated animate__fadeInLeft">Nikolay<br>Semenov</div>
               <div class="subt wow animate__animated animate__fadeInUp">
-              <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer"><abbr title="Chief Scientific Officer">CSO</abbr> in <a href="https://bpacks.eco">Bpacks</a>&nbsp;Lab</span>
+              <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">CSO, Head of R&D</span>
             </div>
             <!--and <abbr title="Chief Technology Officer">CTO</abbr> -->
 
