--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   <div class="m_grid_text">
   <div class="subt wow animate__animated animate__fadeInUp">
-    <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">CSO<br>Bpacks Lab</span>
+    <span lang="en" alt="Polymer Scientist, Rheologist, and Materials Engineer">CSO, Head of R&D</span>
   </div>
 
   <div class="titel">
