--- a/qr/index.html
+++ b/qr/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Генератор QR с логотипом — офлайн</title>
+    <title>Генератор QR</title>
     <link rel="stylesheet" href="styles.css" />
     <style>
       /* Inline custom color picker (only for index.html) */
@@ -53,8 +53,8 @@
           </div>
 
           <div class="field">
-            <label for="margin">Отступ (модули) <span id="marginVal">4</span></label>
-            <input type="range" id="margin" min="0" max="16" step="1" value="4" />
+            <label for="margin">Отступ (модули) <span id="marginVal">2</span></label>
+            <input type="range" id="margin" min="0" max="16" step="1" value="2" />
           </div>
         </div>
 
