--- a/polymers/flow-map.html
+++ b/polymers/flow-map.html
@@ -722,7 +722,7 @@
       </div>
       <div class="control-links">
         <a class="control-link" id="classicLink" href="classic.html">Упрощённая версия</a>
-        <a class="control-link" id="sourceLink" href="https://www.stanmech.com/articles/plastics-identification-flow-chart#:~:text=Plastics%20Identification%20Flow%20Chart%20-%20Articles,Roofing" target="_blank" rel="noopener noreferrer">Source</a>
+        <a class="control-link" id="sourceLink" href="https://www.canada.ca/en/conservation-institute/services/conservation-preservation-publications/cci-notes/plastics.html" target="_blank" rel="noopener noreferrer">Оригинальный флоучарт CCI</a>
       </div>
       <div class="route-console" id="historySection"></div>
     </div>
@@ -758,8 +758,8 @@ const uiText = {
         en: 'Simplified flowchart'
       },
       sourceLink: {
-        ru: 'Источник',
-        en: 'Source'
+        ru: 'Оригинальный флоучарт CCI',
+        en: 'Original CCI flowchart'
       },
       historyHeading: {
         ru: 'Пройденный путь',
