--- a/polymers/classic.html
+++ b/polymers/classic.html
@@ -284,7 +284,7 @@
     </div>
     <p id="lead" class="lead"></p>
     <div class="top-links">
-      <a class="top-link" id="mapLink" href="index.html">Перейти к интерактивной карте</a>
+      <a class="top-link" id="mapLink" href="/polymers">Перейти к интерактивной карте</a>
       <a class="top-link" id="classicSourceLink" href="https://www.stanmech.com/articles/plastics-identification-flow-chart#:~:text=Plastics%20Identification%20Flow%20Chart%20-%20Articles,Roofing" target="_blank" rel="noopener noreferrer">Source</a>
     </div>
 
@@ -1998,6 +1998,10 @@
       historyEl.appendChild(list);
     }
   </script>
+
+      <!-- Yandex.Metrika counter -->   
+<script type="text/javascript" > (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(16681432, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/16681432" style="position:absolute; left:-9999px;" alt="" /></div></noscript> 
+<!-- /Yandex.Metrika counter -->
 </body>
 </html>
 
