--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </p>
             <ul class="social__list" aria-label="Social media">
               <li class="social__item">
-                <a class="social__link" href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
+                <a class="social__link" href="https://www.linkedin.com/in/nikolay-semenov/" target="_blank" rel="noopener noreferrer">
                   <svg class="social__icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
                     <path
                       d="M4.5 9h3.6v11H4.5zM6.3 4a2.1 2.1 0 110.02-4.2 2.1 2.1 0 01-0.02 4.2zM10.6 9h3.4v1.5h0.1c0.5-0.9 1.7-1.8 3.6-1.8 3.8 0 4.6 2.4 4.6 5.6V20h-3.6v-5c0-1.2-0.02-2.9-1.9-2.9-1.9 0-2.1 1.3-2.1 2.9V20h-3.6z"
@@ -106,7 +106,7 @@
                 </a>
               </li>
               <li class="social__item">
-                <a class="social__link" href="https://twitter.com" target="_blank" rel="noopener noreferrer">
+                <a class="social__link" href="https://x.com/Ksider" target="_blank" rel="noopener noreferrer">
                   <svg class="social__icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
                     <path
                       d="M21 6.8a6.3 6.3 0 01-1.8.5 3.2 3.2 0 001.4-1.7 6.4 6.4 0 01-2 0.8 3.2 3.2 0 00-5.5 2.2c0 .3 0 .6.1.9a9.1 9.1 0 01-6.6-3.3 3.2 3.2 0 001 4.3 3.2 3.2 0 01-1.5-.4v.1a3.2 3.2 0 002.6 3.1 3.2 3.2 0 01-1.5.1 3.2 3.2 0 002.9 2.1A6.5 6.5 0 013 17a9.1 9.1 0 004.9 1.4c5.9 0 9.1-4.9 9.1-9.1v-.4A6.5 6.5 0 0021 6.8z"
@@ -116,7 +116,7 @@
                 </a>
               </li>
               <li class="social__item">
-                <a class="social__link" href="https://www.youtube.com" target="_blank" rel="noopener noreferrer">
+                <a class="social__link" href="https://www.youtube.com/@SemenovNicolay" target="_blank" rel="noopener noreferrer">
                   <svg class="social__icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
                     <path
                       d="M21.6 7.2a2.6 2.6 0 00-1.8-1.8C18 5 12 5 12 5s-6 0-7.8.4a2.6 2.6 0 00-1.8 1.8A27.3 27.3 0 002 12a27.3 27.3 0 00.4 4.8 2.6 2.6 0 001.8 1.8C6 19 12 19 12 19s6 0 7.8-.4a2.6 2.6 0 001.8-1.8A27.3 27.3 0 0022 12a27.3 27.3 0 00-.4-4.8zM10 15V9l5 3z"
@@ -126,7 +126,7 @@
                 </a>
               </li>
               <li class="social__item">
-                <a class="social__link" href="https://t.me" target="_blank" rel="noopener noreferrer">
+                <a class="social__link" href="https://t.me/nikolaysemenov" target="_blank" rel="noopener noreferrer">
                   <svg class="social__icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
                     <path
                       d="M21.5 3.4l-19 8a1 1 0 00.1 1.9l4.8 1.5 2 6.3a1 1 0 001.7.4l2.8-3.6 5.1 3.7a1 1 0 001.6-.6l3-15a1 1 0 00-1.1-1.2zM9.2 17.2l-1-3.2 7.5-4.7-4.9 6.1 4.7 3.4z"
@@ -136,7 +136,7 @@
                 </a>
               </li>
               <li class="social__item">
-                <a class="social__link" href="https://www.whatsapp.com" target="_blank" rel="noopener noreferrer">
+                <a class="social__link" href="https://wa.me/79265749813" target="_blank" rel="noopener noreferrer">
                   <svg class="social__icon" viewBox="0 0 24 24" aria-hidden="true" focusable="false">
                     <path
                       d="M12.1 2a9.8 9.8 0 00-8.4 14.5L2.2 22l5.7-1.5A9.8 9.8 0 1012.2 2zm4.6 13.9c-.2.6-1.1 1-1.7 1-1.5.1-3-.5-4.1-1.4a6.5 6.5 0 01-2.4-3.4c-.1-.6 0-1.2.4-1.7.2-.2.5-.5.8-.4l1.1.5c.2.1.4.5.3.8l-.2.6c-.1.2 0 .4.1.6.4.6.9 1.1 1.6 1.4.2.1.4 0 .5-.1l.6-.8c.1-.2.4-.3.6-.2l1.3.5c.3.1.6.3.7.6.1.2.1.5 0 .7z"
