--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Nikolay Semenov</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
+     <link rel="icon" type="image/x-icon" href="favicon.svg">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&family=PT+Sans:wght@400;700&family=PT+Serif:wght@400&display=swap"
