--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@900&family=PT+Sans:wght@400;700&family=PT+Serif:wght@400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Homemade+Apple&family=Noto+Sans:wght@900&family=PT+Sans:wght@400;700&family=PT+Serif:wght@400&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles.css" />
@@ -21,7 +21,7 @@
             <span>Nikolay</span>
             <span>Semenov</span>
           </h1>
-          <p class="hero__tagline">Polymer Scientist,<br />Engineer.</p>
+          <p class="hero__tagline">Polymer Scientist,<br />Engineer</p>
         </div>
         <div class="section__media">
           <div class="placeholder placeholder--portrait" aria-hidden="true">&nbsp;</div>
@@ -30,13 +30,10 @@
 
       <section class="section section--lead">
         <div class="section__text">
-          <h2 class="experience__title">Lead of R&amp;D</h2>
-          <p class="experience__org"><a href="https://bpacks.eco" class="bpacks">Bpacks Lab</a></p>
+          <h2 class="experience__title"><span class="hand">New</span>&nbsp;packaging solutions</h2>
+          <!-- <p class="experience__org"></p> -->
           <p class="experience__body">
-            Lead development of biobased packaging materials and scalable polymer formulations.
-            Delivered 5+ R&amp;D projects from lab concepts to functional prototypes. Developed materials
-            suitable for injection molding and thermoforming. Coordinated testing and pilot production
-            with partner laboratories.
+            At <a href="https://bpacks.eco" class="bpacks">Bpacks</a>&nbsp;Lab, where I lead R&amp;D, we develop bio&#8209;based materials from tree bark and biopolymers. I’ve taken several formulations from early lab mixes to functional trays and cups, ready for thermoforming or injection molding. I also set up pilot runs and coordinated testing with partner labs.
           </p>
         </div>
       </section>
@@ -46,24 +43,20 @@
           <div class="placeholder placeholder--forks" aria-hidden="true"><img src="assets/o.png" alt=""></div>
         </div>
         <div class="section__text">
-          <h2 class="experience__title">Director of Innovation</h2>
-          <p class="experience__org">BEREZKA</p>
+          <h2 class="experience__title">Polymer for <span class="hand">the&nbsp;sea</span></h2>
+          <!-- <p class="experience__org"></p> -->
           <p class="experience__body">
-            Created a plant-based polymer composite with rapid degradation in saline water. Designed
-            and tested MVP products (cups, tableware) at pilot scale. Confirmed home-compostability and
-            moisture-driven hydrolysis.
+            As co-founder and head of development at BEREZKA, I worked on creating a plant&#8209;based composite material that decomposes in salt&nbsp;water. We manufactured and tested pilot samples of the product &mdash; cups and cutlery &mdash; and confirmed that they are fully compostable at home.
           </p>
         </div>
       </section>
 
       <section class="section section--senior">
         <div class="section__text">
-          <h2 class="experience__title">Senior Researcher</h2>
-          <p class="experience__org">IAM RAS</p>
+          <h2 class="experience__title">Rheology <span class="hand">and</span> reinforcement</h2>
+          <!-- <p class="experience__org">IAM RAS</p> -->
           <p class="experience__body">
-            Conducted research in rheology, non-Newtonian fluids, and polymer-filler systems. Used AFM,
-            interferometry, and mechanical testing to study surface topography. Developed polymer
-            compounds; taught and supervised graduate students.
+            During my time as a senior researcher at the Institute of Applied Mechanics, I specialised in the study of the rheology of polymers and filled systems. My work involved smart materials and polymer reinforcement theory, as well as helping young researchers to develop their skills.
           </p>
         </div>
       </section>
@@ -89,7 +82,7 @@
       <section class="section section--social">
         <div class="section__text">
           <div class="social">
-            <h2 class="social__title">Let’s stay in touch</h2>
+            <h2 class="social__title">Let’s stay in <span class="hand">touch</span></h2>
             <p class="social__email">I’m just one email away → <a href="mailto:semenov.ne@gmail.com">semenov.ne@gmail.com</a>
             </p>
             <p class="social__description">
