--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Nikolay Semenov</title>
+    <title>Nikolai Semenov</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
      <link rel="icon" type="image/x-icon" href="favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +18,7 @@
       <section class="section section--hero">
         <div class="section__text hero">
           <h1 class="hero__name">
-            <span>Nikolay</span>
+            <span>Nikolai</span>
             <span>Semenov</span>
           </h1>
           <p class="hero__tagline">Polymer Scientist,<br />Engineer</p>
