--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
           </h1>
           <p class="hero__tagline">Polymer Scientist,<br />Engineer</p>
         </div>
+        <a class="social__preview social__preview--hero" href="/polymers">
+          <span class="sr-only">Interactive Plastic Identification</span>
+          <img
+            class="social__preview-image"
+            src="assets/ipi/ipi4.png"
+            alt="Interactive Plastic Identification preview"
+          />
+        </a>
         <div class="section__media">
           <div class="placeholder placeholder--portrait" aria-hidden="true">&nbsp;</div>
         </div>
@@ -143,13 +151,9 @@
           </div>
         </div>
         <div class="section__media">
-          <a class="social__preview" href="/polymers">
-            <span class="sr-only">Interactive Plastic Identification</span>
-            <img
-              class="social__preview-image"
-              src="assets/ipi/ipi4.png"
-              alt="Interactive Plastic Identification preview"
-            />
+          <a class="qr-preview" href="/qr">
+            <span class="sr-only">QR link</span>
+            <img class="qr-preview__image" src="assets/qr.png" alt="" aria-hidden="true" />
           </a>
         </div>
       </section>
