--- a/qr/index.html
+++ b/qr/index.html
@@ -29,9 +29,16 @@
         <h1 data-i18n-key="appTitle">Генератор QR-кодов</h1>
         <p class="sub" data-i18n-key="appSubtitle">Настройте внешний вид QR-кода</p>
       </div>
-      <div class="lang-switch" role="group" aria-label="Language selector" data-i18n-key="langSwitcherAria" data-i18n-target="aria-label">
-        <button type="button" class="lang-btn is-active" data-lang="ru">RU</button>
-        <button type="button" class="lang-btn" data-lang="en">EN</button>
+      <div class="header-actions">
+        <button type="button" id="btnCopyLink" class="icon-btn copy-link-btn" aria-label="Скопировать ссылку" data-i18n-key="btnCopyLink" data-i18n-target="aria-label">
+          <svg aria-hidden="true" focusable="false" width="18" height="18" viewBox="0 0 24 24">
+            <path d="M8.464 15.536a5 5 0 0 1 0-7.072l3.182-3.182a5 5 0 1 1 7.071 7.07l-.353.354a1 1 0 0 1-1.414-1.414l.353-.353a3 3 0 1 0-4.243-4.243l-3.182 3.182a3 3 0 0 0 4.243 4.243 1 1 0 1 1 1.414 1.414 5 5 0 0 1-7.071 0Zm9.192-3.465a5 5 0 0 1 0 7.071l-3.182 3.183a5 5 0 0 1-7.07-7.071l.353-.353a1 1 0 0 1 1.414 1.414l-.354.353a3 3 0 0 0 4.244 4.244l3.182-3.182a3 3 0 0 0-4.243-4.244 1 1 0 0 1-1.414-1.414 5 5 0 0 1 7.07 0Z" fill="currentColor"/>
+          </svg>
+        </button>
+        <div class="lang-switch" role="group" aria-label="Language selector" data-i18n-key="langSwitcherAria" data-i18n-target="aria-label">
+          <button type="button" class="lang-btn is-active" data-lang="ru">RU</button>
+          <button type="button" class="lang-btn" data-lang="en">EN</button>
+        </div>
       </div>
     </header>
 
@@ -354,5 +361,6 @@
     <!-- Yandex.Metrika counter -->   
 <script type="text/javascript" > (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym"); ym(16681432, "init", { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/16681432" style="position:absolute; left:-9999px;" alt="" /></div></noscript> 
 <!-- /Yandex.Metrika counter -->
+<script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="CrOcfcFaft" data-color="#BD5FFF" data-emoji="" data-font="Cookie" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#ffffff" data-coffee-color="#FFDD00"></script>
   </body>
   </html>
