--- a/qr/index.html
+++ b/qr/index.html
@@ -35,6 +35,11 @@
             <path d="M8.464 15.536a5 5 0 0 1 0-7.072l3.182-3.182a5 5 0 1 1 7.071 7.07l-.353.354a1 1 0 0 1-1.414-1.414l.353-.353a3 3 0 1 0-4.243-4.243l-3.182 3.182a3 3 0 0 0 4.243 4.243 1 1 0 1 1 1.414 1.414 5 5 0 0 1-7.071 0Zm9.192-3.465a5 5 0 0 1 0 7.071l-3.182 3.183a5 5 0 0 1-7.07-7.071l.353-.353a1 1 0 0 1 1.414 1.414l-.354.353a3 3 0 0 0 4.244 4.244l3.182-3.182a3 3 0 0 0-4.243-4.244 1 1 0 0 1-1.414-1.414 5 5 0 0 1 7.07 0Z" fill="currentColor"/>
           </svg>
         </button>
+        <button type="button" id="btnResetDefaults" class="icon-btn reset-btn" aria-label="Сбросить настройки" data-i18n-key="btnReset" data-i18n-target="aria-label">
+          <svg aria-hidden="true" focusable="false" width="18" height="18" viewBox="0 0 24 24">
+            <path d="M12 5V2L7 6l5 4V7c3.309 0 6 2.691 6 6a6 6 0 0 1-6 6 5.99 5.99 0 0 1-5.197-3H4.697A8.004 8.004 0 0 0 12 21c4.411 0 8-3.589 8-8s-3.589-8-8-8Z" fill="currentColor"/>
+          </svg>
+        </button>
         <div class="lang-switch" role="group" aria-label="Language selector" data-i18n-key="langSwitcherAria" data-i18n-target="aria-label">
           <button type="button" class="lang-btn is-active" data-lang="ru">RU</button>
           <button type="button" class="lang-btn" data-lang="en">EN</button>
