--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <span class="education__details">Mechanics of Fluid, Gas, and Plasma</span>
           </p>
           <p class="education__item">
-            <span class="education__degree">Engineer &amp; BSc</span>
+            <span class="education__degree">Engineer <span class="hand">&amp; BSc</span></span>
             <span class="education__details">Materials Science and Technology of New Materials</span>
           </p>
         </div>
