--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
             At <a href="https://bpacks.eco" class="bpacks">Bpacks</a>&nbsp;Lab, where I lead R&amp;D, we develop bio&#8209;based materials from tree bark and biopolymers. I’ve taken several formulations from early lab mixes to functional trays and cups, ready for thermoforming or injection molding. I also set up pilot runs and coordinated testing with partner labs.
           </p>
         </div>
+        <div class="section__media">
+          <div class="placeholder placeholder--trays" aria-hidden="true"><img src="assets/tray.png" alt=""></div>
+        </div>
       </section>
 
       <section class="section section--director">
